application_id = 'com.github.adenlall.salatok-gtk'

scalable_dir = join_paths('scalable')
install_data(
  join_paths(scalable_dir, ('@0@.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', join_paths('hicolor', 'scalable', 'apps'))
)

symbolic_dir = join_paths('symbolic')
install_data(
  join_paths(symbolic_dir, ('@0@.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', join_paths('hicolor', 'scalable', 'apps'))
)
