symbolic_dir = join_paths('symbolic')
install_data(
  join_paths(symbolic_dir, 'io.github.adenlall.salatok-gtk.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', join_paths('hicolor', 'symbolic', 'apps'))
)

symbolic_dir = join_paths('scalable')
install_data(
  join_paths(symbolic_dir, 'io.github.adenlall.salatok-gtk.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', join_paths('hicolor', 'scalable', 'apps'))
)